--- a/Within_Species/Species_Specific_Models.Rmd
+++ b/Within_Species/Species_Specific_Models.Rmd
@@ -6,6 +6,10 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
+```
+
+
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
@@ -261,56 +265,111 @@ traits_2019 <- full_join_2019 %>%
 
 ```{r}
 traits <- traits_2019 %>% 
-  filter(sla < 100) %>% 
+  filter(sla < 60) %>% # there are a few crazy outliers that I need to go double-check
+  filter(ldmc < 1000) %>%  # there are a few crazy outliers that I need to go double-check
   mutate(log_sla = log(sla)) %>% 
   mutate(log_sla_plus = log(sla + 1)) %>% 
   mutate(sqrt_sla = sqrt(sla)) %>% 
   mutate(sla2 = sla^2) %>% 
     drop_na()
+
+ggplot(data = traits, aes(x = indiv_area, color = treatment)) +
+  geom_histogram()
   
+# SLA
 model_1 <- glmmTMB(data = traits, sla ~ treatment * climate * species + (1|new_block), family = gaussian, na.action = na.fail) # model convergence
+model_1 <- glm(data = traits, sla ~ treatment * climate * species, family = gaussian, na.action = na.fail)
 dredge(model_1)
-model_1 <- glmmTMB(data = traits, sla ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(model_1) # best fit model has climate and species
-model_1 <- glmmTMB(data = traits, sla ~ climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(model_1, plot= T) # doesn't pass KS test
-shapiro.test(residuals(model_1)) # not normal
-
-# log transformation
-model_1 <- glmmTMB(data = traits,log_sla ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(model_1) # best fit model has climate and species
-model_1 <- glmmTMB(data = traits, log_sla ~ climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(model_1, plot= T) # doesn't pass KS test
-shapiro.test(residuals(model_1)) # not normal
-
-# log+1 transformation
-model_1 <- glmmTMB(data = traits, log_sla_plus ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(model_1) # best fit model has climate and species
-model_1 <- glmmTMB(data = traits, log_sla_plus ~ climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(model_1, plot= T)  # doesn't pass KS test
-shapiro.test(residuals(model_1)) # not normal
-
-# square root transformation
-model_1 <- glmmTMB(data = traits, sqrt_sla ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-dredge(model_1) # best fit model has climate and species
-model_1 <- glmmTMB(data = traits, sqrt_sla ~ climate + species + (1|new_block), family = gaussian, na.action = na.fail)
-
-simulateResiduals(model_1, plot= T) # doesn't pass KS test
-shapiro.test(residuals(model_1)) # not normal
-
-# squared transformation
-model_1 <- glmmTMB(data = traits, sla2 ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail) 
-dredge(model_1)
-
-model_1 <- glm(data = traits, sla ~ treatment * climate + species, family = gaussian, na.action = na.fail)
-dredge(model_1) # best fit includes climate and species
 model_1 <- glm(data = traits, sla ~ climate + species, family = gaussian, na.action = na.fail)
 
-simulateResiduals(model_1, plot= T) # so bad
+simulateResiduals(model_1, plot= T) # meh
 shapiro.test(residuals(model_1)) # not normal
+
+# LDMC
+model_1 <- glmmTMB(data = traits, ldmc ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(model_1) 
+model_1 <- glmmTMB(data = traits, sla ~ species + (1|new_block), family = gaussian, na.action = na.fail)
+
+simulateResiduals(model_1, plot= T) # ok
+shapiro.test(residuals(model_1)) # not normal
+
+# 
+# # log transformation
+# model_1 <- glmmTMB(data = traits,log_sla ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail)
+# dredge(model_1) # best fit model has climate and species
+# model_1 <- glmmTMB(data = traits, log_sla ~ climate + species + (1|new_block), family = gaussian, na.action = na.fail)
+# 
+# simulateResiduals(model_1, plot= T) # doesn't pass KS test
+# shapiro.test(residuals(model_1)) # not normal
+# 
+# # log+1 transformation
+# model_1 <- glmmTMB(data = traits, log_sla_plus ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail)
+# dredge(model_1) # best fit model has climate and species
+# model_1 <- glmmTMB(data = traits, log_sla_plus ~ climate + species + (1|new_block), family = gaussian, na.action = na.fail)
+# 
+# simulateResiduals(model_1, plot= T)  # doesn't pass KS test
+# shapiro.test(residuals(model_1)) # not normal
+# 
+# # square root transformation
+# model_1 <- glmmTMB(data = traits, sqrt_sla ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail)
+# dredge(model_1) # best fit model has climate and species
+# model_1 <- glmmTMB(data = traits, sqrt_sla ~ climate + species + (1|new_block), family = gaussian, na.action = na.fail)
+# 
+# simulateResiduals(model_1, plot= T) # doesn't pass KS test
+# shapiro.test(residuals(model_1)) # not normal
+# 
+# # squared transformation
+# model_1 <- glmmTMB(data = traits, sla2 ~ treatment * climate + species + (1|new_block), family = gaussian, na.action = na.fail) 
+# dredge(model_1)
+# 
+# model_1 <- glm(data = traits, sla ~ treatment * climate + species, family = gaussian, na.action = na.fail)
+# dredge(model_1) # best fit includes climate and species
+# model_1 <- glm(data = traits, sla ~ climate + species, family = gaussian, na.action = na.fail)
+# 
+# simulateResiduals(model_1, plot= T) # so bad
+# shapiro.test(residuals(model_1)) # not normal
+# 
+# 
+# # un-transformed, Gamma
+# model_1  <- glmmTMB(data = traits, sla ~ treatment * climate + species + (1|new_block), family = Gamma(link = "log"))
+# dredge(model_1)
+# model_1  <- glmmTMB(data = traits, sla ~ climate + species + (1|new_block), family = Gamma(link = "log"))
+# 
+# simulateResiduals(model_1, plot= T) # doesn't pass KS test
+# shapiro.test(residuals(model_1)) # not normal
+# 
+# # log transformed, Gamma
+# model_1  <- glmmTMB(data = traits, log_sla ~ treatment * climate + species + (1|new_block), family = Gamma(link = "log"))
+# dredge(model_1)
+# model_1  <- glmmTMB(data = traits, log_sla ~ climate + species + (1|new_block), family = Gamma(link = "log"))
+# 
+# simulateResiduals(model_1, plot= T) # doesn't pass KS test
+# shapiro.test(residuals(model_1)) # not normal
+# 
+# # log+1 transformed, Gamma
+# model_1  <- glmmTMB(data = traits, log_sla_plus ~ treatment * climate + species + (1|new_block), family = Gamma(link = "log"))
+# dredge(model_1)
+# model_1  <- glmmTMB(data = traits, log_sla_plus ~ climate + species + (1|new_block), family = Gamma(link = "log"))
+# 
+# simulateResiduals(model_1, plot= T) # doesn't pass KS test
+# shapiro.test(residuals(model_1)) # not normal
+# 
+# # sqrt transformed, Gamma
+# model_1  <- glmmTMB(data = traits, sqrt_sla ~ treatment * climate + species + (1|new_block), family = Gamma(link = "log"))
+# dredge(model_1)
+# model_1  <- glmmTMB(data = traits, sqrt_sla ~ climate + species + (1|new_block), family = Gamma(link = "log"))
+# 
+# simulateResiduals(model_1, plot= T) # doesn't pass KS test
+# shapiro.test(residuals(model_1)) # not normal
+# 
+# # power transformed, Gamma
+# model_1  <- glmmTMB(data = traits, sla2 ~ treatment * climate + species + (1|new_block), family = Gamma(link = "log"))
+# dredge(model_1)
+# model_1  <- glmmTMB(data = traits, sla2 ~ climate + species + (1|new_block), family = Gamma(link = "log"))
+# 
+# simulateResiduals(model_1, plot= T) # better
+# shapiro.test(residuals(model_1)) # not normal
+
 ```
 
 ## GLMs for individual species change
@@ -344,17 +403,18 @@ model_test <- function(species_name, trait){
 ```
 ### Bromus diandrus
 ```{r}
-bro_dia <- traits_2019 %>% 
-  filter(species == "Bromus diandrus")
+bro_dia <- traits %>% 
+  filter(species == "Bromus diandrus") %>% 
+  mutate(log_sla = log(sla))
 
-ggplot(data = bro_dia, aes(x = climate, y = sla, color = treatment)) +
-  geom_boxplot()
+ggplot(data = bro_dia, aes(x = sla, color = treatment)) +
+  geom_histogram()
 
-ggplot(data = bro_dia, aes(x = climate, y = indiv_area, color = treatment)) +
-  geom_boxplot()
+ggplot(data = bro_dia, aes(x = ldmc, color = treatment)) +
+  geom_histogram()
 
-ggplot(data = bro_dia, aes(x = climate, y = ldmc, color = treatment)) +
-  geom_boxplot()
+ggplot(data = bro_dia, aes(x = indiv_area, color = treatment)) +
+  geom_histogram()
 
 ```
 #### LA
@@ -373,12 +433,37 @@ simulateResiduals(bro_dia_la, plot= T) # looks good
 shapiro.test(residuals(bro_dia_la)) # normal
 
 ```
+#### SLA
+SLA ~ 1 + block
+```{r}
+# model
+bro_dia_sla <- glmmTMB(data = bro_dia, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(bro_dia_sla) # best fit model is just intercept, but would need to do averaging
+bro_dia_sla <- glmmTMB(data = bro_dia, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+
+simulateResiduals(bro_dia_sla, plot= T) # ok
+shapiro.test(residuals(bro_dia_sla)) # normal
+
+```
+#### LDMC
+LDMC ~ 1
+```{r}
+# model
+bro_dia_ldmc <- glmmTMB(data = bro_dia, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # convergence
+bro_dia_ldmc <- glmmTMB(data = bro_dia, ldmc ~ treatment * climate, family = gaussian, na.action = na.fail)
+dredge(bro_dia_ldmc) # best fit model is climate
+bro_dia_ldmc <- glmmTMB(data = bro_dia, ldmc ~ climate, family = gaussian, na.action = na.fail)
+
+simulateResiduals(bro_dia_ldmc, plot= T) # ok
+shapiro.test(residuals(bro_dia_ldmc)) # normal
+```
 ### Festuca myuros
 ```{r}
-fes_myu <- traits_2019 %>% 
+fes_myu <- traits %>% 
   filter(species == "Festuca myuros") %>%
   mutate(log_area = log(indiv_area)) %>% 
   mutate(log_sla = log(sla)) %>% 
+  mutate(log_ldmc = log(ldmc)) %>% 
   drop_na()
 
 fes_myu %>%
@@ -389,11 +474,9 @@ fes_myu %>%
   geom_boxplot() +
   theme_bw() +
   facet_grid(~ traits, scales = "free")
-
 ```
 #### LA
-best fit: LA ~ climate
-* need to do model averaging
+best fit: log(LA) ~ climate
 ```{r}
 fes_myu_la <- glmmTMB(data = fes_myu, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
 dredge(fes_myu_la) # get convergence error
@@ -402,12 +485,12 @@ fes_myu_la <- glm(data = fes_myu, indiv_area ~ treatment * climate, family = gau
 dredge(fes_myu_la) # best fit model is climate only
 fes_myu_la <- glm(data = fes_myu, indiv_area ~ climate, family = gaussian, na.action = na.fail)
 
-simulateResiduals(fes_myu_la, plot= T) # bad
-shapiro.test(residuals(fes_myu_la)) # normal
+simulateResiduals(fes_myu_la, plot= T) # ok
+shapiro.test(residuals(fes_myu_la)) # not quite normal
 
 # log transformation
 fes_myu_la <- glm(data = fes_myu, log_area ~ treatment * climate, family = gaussian, na.action = na.fail)
-dredge(fes_myu_la) # best fit model is climate only, but need to do model averaging
+dredge(fes_myu_la) # best fit model is climate only
 fes_myu_la <- glm(data = fes_myu, log_area ~ climate, family = gaussian, na.action = na.fail)
 
 simulateResiduals(fes_myu_la, plot= T) # good
@@ -434,11 +517,31 @@ fes_myu_sla <- glm(data = fes_myu, log_sla ~ 1, family = gaussian, na.action = n
 
 simulateResiduals(fes_myu_sla, plot= T) # ok
 shapiro.test(residuals(fes_myu_sla)) # normal
+```
+#### LDMC
+```{r}
+fes_myu_ldmc <- glmmTMB(data = fes_myu, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # get convergence error
 
+fes_myu_ldmc <- glm(data = fes_myu, ldmc ~ treatment * climate, family = gaussian, na.action = na.fail)
+dredge(fes_myu_ldmc) # best fit model is intercept only, but would need to average
+fes_myu_ldmc <- glm(data = fes_myu, ldmc ~ 1, family = gaussian, na.action = na.fail)
+
+simulateResiduals(fes_myu_ldmc, plot= T) # ok?
+shapiro.test(residuals(fes_myu_ldmc)) # not normal
+
+# log transformation
+fes_myu_ldmc <- glmmTMB(data = fes_myu, log_ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # get convergence error
+
+fes_myu_ldmc <- glm(data = fes_myu, log_ldmc ~ treatment * climate, family = gaussian, na.action = na.fail)
+dredge(fes_myu_ldmc) # best fit model is intercept only
+fes_myu_ldmc <- glm(data = fes_myu, log_ldmc ~ 1, family = gaussian, na.action = na.fail)
+
+simulateResiduals(fes_myu_ldmc, plot= T) # does not pass KS test
+shapiro.test(residuals(fes_myu_ldmc)) # not normal
 ```
 ### Bromus hordeaceus
 ```{r}
-bro_hor <- traits_2019 %>% 
+bro_hor <- traits %>% 
   filter(species == "Bromus hordeaceus") %>%
   mutate(log_area = log(indiv_area)) %>% 
   mutate(log_sla = log(sla)) %>% 
@@ -455,8 +558,11 @@ bro_hor %>%
 
 ```
 #### LA
+LA ~ 1
+* need to do model averaging
 ```{r}
 bro_hor_la <- glmmTMB(data = bro_hor, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # get convergence error
+dredge(bro_hor_la)
 
 bro_hor_la <- glm(data = bro_hor, indiv_area ~ treatment * climate, family = gaussian, na.action = na.fail)
 dredge(bro_hor_la) # best fit model is climate, but would need to average
@@ -466,22 +572,29 @@ simulateResiduals(bro_hor_la, plot= T) # good
 shapiro.test(residuals(bro_hor_la)) # normal
 ```
 #### SLA
+SLA ~ 1
+* need to do model averaging
 ```{r}
 bro_hor_sla <- glmmTMB(data = bro_hor, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
 dredge(bro_hor_sla) # best fit model is intercept, but would need to do averaging
 bro_hor_sla <- glmmTMB(data = bro_hor, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-simulateResiduals(bro_hor_sla, plot= T) # ok?
+simulateResiduals(bro_hor_sla, plot= T) # ok
 shapiro.test(residuals(bro_hor_sla)) # normal
-
 ```
 #### LDMC
+LDMC ~ 1
 ```{r}
+bro_hor_ldmc <- glmmTMB(data = bro_hor, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(bro_hor_ldmc) # best fit model is intercept
+bro_hor_ldmc <- glmmTMB(data = bro_hor, ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
+simulateResiduals(bro_hor_ldmc, plot= T) # good
+shapiro.test(residuals(bro_hor_ldmc)) # normal
 ```
 ### Bromus tectorum
 ```{r}
-bro_tec <- traits_2019 %>% 
+bro_tec <- traits %>% 
   filter(species == "Bromus tectorum") %>%
   mutate(log_ldmc = log(ldmc)) %>% 
   drop_na()
@@ -496,10 +609,19 @@ bro_tec %>%
   facet_grid(~ traits, scales = "free")
 ```
 #### LA
+* has huge outlier
 ```{r}
+bro_tec_la <- glmmTMB(data = bro_tec, indiv_area ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail) # convergence
+bro_tec_la <- glmmTMB(data = bro_tec, indiv_area ~ treatment * climate, family = gaussian, na.action = na.fail)
+dredge(bro_tec_la) # best fit is intercept
+bro_tec_la <- glmmTMB(data = bro_tec, indiv_area ~ 1, family = gaussian, na.action = na.fail)
 
+simulateResiduals(bro_tec_la, plot= T) # not good
+shapiro.test(residuals(bro_tec_la)) # not normal
 ```
 #### SLA
+SLA ~ intercept + block
+*need to do averaging
 ```{r}
 bro_tec_sla <- glmmTMB(data = bro_tec, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
 dredge(bro_tec_sla) # best fit model is intercept, but would need to do averaging
@@ -524,11 +646,10 @@ bro_tec_ldmc <- glmmTMB(data = bro_tec, log_ldmc ~ 1 + (1|new_block), family = g
 
 simulateResiduals(bro_tec_ldmc, plot= T) # does not pass KS test
 shapiro.test(residuals(bro_tec_ldmc)) # normal
-
 ```
 ### Hordeum murium
 ```{r}
-hor_mur <- traits_2019 %>% 
+hor_mur <- traits %>% 
   filter(species == "Bromus tectorum") %>%
   mutate(log_ldmc = log(ldmc)) %>% 
   drop_na()
@@ -544,175 +665,320 @@ hor_mur %>%
 ```
 #### LA
 ```{r}
-hor_mur <- traits_19[traits_19$Species == "Hordeum murinum",]
-
-glm_hor_mur <- glm(data = hor_mur, LA ~ Climate * Treatment, family = gaussian, na.action = na.fail)
-dredge(glm_hor_mur) # best fit includes treatment only
-glm_hor_mur <- glm(data = hor_mur, LA ~ Treatment, family = gaussian, na.action = na.fail)
+hor_mur_la <- glm(data = hor_mur, indiv_area ~ climate * treatment, family = gaussian, na.action = na.fail)
+dredge(hor_mur_la) # best fit intercept only
+hor_mur_la <- glm(data = hor_mur, indiv_area ~ 1, family = gaussian, na.action = na.fail)
 
 # does data fit model?
-simulateResiduals(glm_hor_mur, plot=T) 
-shapiro.test(residuals(glm_hor_mur)) # residuals are normal
-
-# post-hoc
-emmeans(glm_hor_mur, pairwise ~ Treatment)
-
-hor_mur_la <- emmeans(glm_hor_mur, ~ Treatment)
-plot(hor_mur_la)
-
+simulateResiduals(hor_mur_la, plot=T) # does not pass KS test
+shapiro.test(residuals(hor_mur_la)) # not normal
 ```
-
-#### Erodium cicutarium
-
-LA ~ 1
-
-Next best is LA ~ climate, but no difference between climate treatments
-
+#### SLA
+SLA ~ 1 + block
+*need to do averaging
 ```{r}
+hor_mur_sla <- glmmTMB(data = hor_mur, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(hor_mur_sla) # best fit model is intercept, but would need to do averaging
+hor_mur_sla <- glmmTMB(data = hor_mur, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-ero_cic <- traits_19[traits_19$Species == "Erodium cicutarium",]
-
-glm_ero_cic <- glm(data = ero_cic, LA ~ Climate * Treatment, family = gaussian, na.action = na.fail)
-dredge(glm_ero_cic) # best model includes intercept only, but model with climate also has similar AIC value
-glm_ero_cic <- glm(data = ero_cic, LA ~ 1, family = gaussian, na.action = na.fail)
-
-# does data fit model?
-simulateResiduals(glm_ero_cic, plot=T) # good
-shapiro.test(residuals(glm_hor_mur)) # normal
-
-# trying second-best model
-glm_ero_cic <- glm(data = ero_cic, LA ~ Climate, family = gaussian, na.action = na.fail)
-simulateResiduals(glm_ero_cic, plot=T) # doesn't have enough data points?
-shapiro.test(residuals(glm_hor_mur)) # normal
-
-# post-hoc
-emmeans(glm_ero_cic, pairwise ~ Climate)
-
-ero_cic_la <- emmeans(glm_ero_cic, ~ Climate)
-plot(ero_cic_la)
-
+simulateResiduals(hor_mur_sla, plot= T) # good
+shapiro.test(residuals(hor_mur_sla)) # normal
 ```
-
-#### Galium aparine
-
-- native forb
-
-LA ~ Climate
-- model drops treatment
-- Nice gradient over climate
-    - Arid > Int
-    - Arid > Mesic
-    - Int > Mesic
-
+#### LDMC
 ```{r}
-gal_apa <- traits_19[traits_19$Species == "Galium aparine",]
+hor_mur_ldmc <- glmmTMB(data = hor_mur, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(hor_mur_ldmc) # best fit model is intercept
+hor_mur_ldmc <- glmmTMB(data = hor_mur, ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
-# models
-glm_gal_apa <- glm(data = gal_apa, LA ~ Climate * Treatment, family = gaussian, na.action = na.fail)
-dredge(glm_gal_apa) #best model climate only
-glm_gal_apa <- glm(data = gal_apa, LA ~ Climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(glm_gal_apa, plot=T)
-shapiro.test(residuals(glm_gal_apa)) # normal
-
-# post-hoc testing
-emmeans(glm_gal_apa, pairwise ~ Climate)
-
-gal_apa_la <- emmeans(glm_gal_apa, ~ Climate)
-plot(gal_apa_la, by = NULL, CIs = FALSE, comparisons = TRUE, horizontal = FALSE, colors = "black")
-
+simulateResiduals(hor_mur_ldmc, plot= T) # does not pass KS test
+shapiro.test(residuals(hor_mur_ldmc)) # normal
 ```
-
-#### Plagiobothrys nothofulvus
-
-- native forb
-
-LA ~ 1
-- log transformed
-- best model is intercept only
-
+### Erodium cicutarium
 ```{r}
-# Plagiobothrys nothofulvus (forb)
-pla_not <- traits_19[traits_19$Species == "Plagiobothrys nothofulvus",]
-            
-glm_pla_not <- glm(data = pla_not, LA ~ Climate * Treatment, family = gaussian, na.action = na.fail)
-dredge(glm_pla_not) # best model intercept only
-
-simulateResiduals(glm_pla_not, plot=T) # residuals vs. predicted not good
-shapiro.test(residuals(glm_pla_not)) # normal
-
-# trying log transform
-glm_pla_not <- glm(data = pla_not, log_LA ~ Climate * Treatment, family = gaussian, na.action = na.fail)
-dredge(glm_pla_not) # best model intercept only
-
-simulateResiduals(glm_pla_not, plot=T) # good
-shapiro.test(residuals(glm_pla_not)) # normal
-
-```
-
-#### Ribes californicum var. hesperium
-
-- shrub
-- model includes climate * treatment
-- Int > Mesic for Partial treatments
-- Open < Partial at Intermediate
-- Not enough data for other treatments at Int
-- No difference in treatments at Mesic
-
-```{r}
-ribes <- traits_19[traits_19$Species == "Ribes californicum var. hesperium",] %>% 
-                 drop_na()
-
-glm_ribes <- glm(data = ribes, LA ~ Climate * Treatment, family = gaussian, na.action = na.fail)
-dredge(glm_ribes)
-
-simulateResiduals(glm_ribes, plot=T) # good
-shapiro.test(residuals(glm_ribes)) # normal
-
-emmeans(glm_ribes, pairwise ~ Climate | Treatment)
-emmeans(glm_ribes, pairwise ~ Treatment | Climate)
-
-```
-
-#### Symphoricarpos_mollis
-
-- shrub
-- Only present at mesic
-- Best model is intercept only
-
-```{r}
-sym_mol <- traits_19[traits_19$Species == "Symphoricarpos_mollis",] %>% 
-                 drop_na()
-
-glm_sym_mol <- glm(data = sym_mol, LA ~ Treatment, family = gaussian, na.action = na.fail) #only at Mesic climate
-dredge(glm_sym_mol)
-glm_sym_mol <- glm(data = sym_mol, LA ~ 1, family = gaussian, na.action = na.fail) #only at Mesic climate
-
-simulateResiduals(glm_sym_mol, plot=T) #good
-shapiro.test(residuals(glm_sym_mol)) # normal
-
-
-```
-
-#### Ericameria nauseosa
-
-- shrub
-- best model is intercept only
-
-```{r}
-eri_nau <- traits_19[traits_19$Species == "Ericameria nauseosa",] %>% 
+ero_cic <- traits %>% 
+  filter(species == "Erodium cicutarium") %>%
+  mutate(log_ldmc = log(ldmc)) %>% 
   drop_na()
 
-glm_eri_nau <- glm(data = eri_nau, LA ~ Climate * Treatment, family = gaussian, na.action = na.fail)
-dredge(glm_eri_nau)
+ero_cic %>%
+  pivot_longer(cols = indiv_area:ldmc,
+               names_to = "traits",
+               values_to = "value") %>%
+  ggplot(aes(x = climate, y = value, color = treatment)) +
+  geom_boxplot() +
+  theme_bw() +
+  facet_grid(~ traits, scales = "free")
+```
+#### LA
+LA ~ climate
+```{r}
+ero_cic_la <- glmmTMB(data = ero_cic, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ero_cic_la) # convergence problem
+ero_cic_la <- glmmTMB(data = ero_cic, indiv_area ~ climate * treatment, family = gaussian, na.action = na.fail)
+dredge(ero_cic_la)  # best fit climate only
+ero_cic_la <- glmmTMB(data = ero_cic, indiv_area ~ climate, family = gaussian, na.action = na.fail)
 
-simulateResiduals(glm_eri_nau, plot=T) # good
-shapiro.test(residuals(glm_eri_nau)) # normal
+# does data fit model?
+simulateResiduals(ero_cic_la, plot=T) # ok?
+shapiro.test(residuals(ero_cic_la)) # normal
+```
+#### SLA
+SLA ~ 1
+```{r}
+ero_cic_sla <- glmmTMB(data = ero_cic, sla ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ero_cic_sla) # best fit model is intercept only
+hor_mur_sla <- glmmTMB(data = ero_cic, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
 
+simulateResiduals(ero_cic_sla, plot= T) # good
+shapiro.test(residuals(ero_cic_sla)) # normal
+```
+#### LDMC
+LDMC ~ 1 + Block
+* need to do averaging
+```{r}
+ero_cic_ldmc <- glmmTMB(data = ero_cic, ldmc ~ treatment * climate + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ero_cic_ldmc) # best fit model is climate, but need to do averaging
+hor_mur_ldmc <- glmmTMB(data = ero_cic, ldmc ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
+
+simulateResiduals(ero_cic_ldmc, plot= T) # good
+shapiro.test(residuals(ero_cic_ldmc)) # normal
+```
+### Galium aparine
+```{r}
+gal_apa <- traits %>% 
+  filter(species == "Galium aparine") %>%
+  mutate(log_ldmc = log(ldmc)) %>% 
+  drop_na()
+
+gal_apa %>%
+  pivot_longer(cols = indiv_area:ldmc,
+               names_to = "traits",
+               values_to = "value") %>%
+  ggplot(aes(x = climate, y = value, color = treatment)) +
+  geom_boxplot() +
+  theme_bw() +
+  facet_grid(~ traits, scales = "free")
+```
+#### LA
+LA ~ Climate
+```{r}
+gal_apa_la <- glmmTMB(data = gal_apa, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(gal_apa_la) # best fit climate only
+gal_apa_la <- glmmTMB(data = gal_apa, indiv_area ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(gal_apa_la, plot=T) # ok?
+shapiro.test(residuals(gal_apa_la)) # normal
+```
+#### SLA
+```{r}
+gal_apa_sla <- glmmTMB(data = gal_apa, sla ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(gal_apa_sla) # best fit climate only, need to do model averaging
+gal_apa_sla <- glmmTMB(data = gal_apa, sla ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(gal_apa_sla, plot=T) # ok?
+shapiro.test(residuals(gal_apa_sla)) # not normal
+```
+#### LDMC
+```{r}
+gal_apa_ldmc <- glmmTMB(data = gal_apa, ldmc ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # model convergence
+gal_apa_ldmc <- glmmTMB(data = gal_apa, ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
+dredge(gal_apa_ldmc ) # best fit climate only
+gal_apa_ldmc <- glmmTMB(data = gal_apa, ldmc ~ climate, family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(gal_apa_ldmc, plot=T) # ok?
+shapiro.test(residuals(gal_apa_ldmc )) # not normal
+```
+### Plagiobothrys nothofulvus
+```{r}
+pla_not <- traits %>% 
+  filter(species == "Plagiobothrys nothofulvus") %>%
+  mutate(log_ldmc = log(ldmc)) %>% 
+  drop_na()
+
+pla_not %>%
+  pivot_longer(cols = indiv_area:ldmc,
+               names_to = "traits",
+               values_to = "value") %>%
+  ggplot(aes(x = climate, y = value, color = treatment)) +
+  geom_boxplot() +
+  theme_bw() +
+  facet_grid(~ traits, scales = "free")
+```
+#### LA
+```{r}
+pla_not_la <- glmmTMB(data = pla_not, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(pla_not_la) # best fit intercept only
+pla_not_la <- glmmTMB(data = pla_not, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(pla_not_la, plot=T) # doesn't look ok
+shapiro.test(residuals(pla_not_la)) # not normal
+```
+#### SLA
+```{r}
+pla_not_sla <- glmmTMB(data = pla_not, sla ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(pla_not_sla) # best fit climate only
+pla_not_sla <- glmmTMB(data = pla_not, sla ~ climate + (1|new_block), family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(pla_not_sla, plot=T) # ok?
+shapiro.test(residuals(pla_not_sla)) # not normal
+```
+#### LDMC 
+```{r}
+pla_not_ldmc <- glmmTMB(data = pla_not, ldmc ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # model convergence
+pla_not_ldmc <- glmmTMB(data = pla_not, ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
+dredge(pla_not_ldmc) # best fit model is intercept
+pla_not_ldmc <- glmmTMB(data = pla_not, ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(pla_not_ldmc, plot=T) # does not pass KS test
+shapiro.test(residuals(pla_not_ldmc)) # not normal
+```
+### Ribes californicum var. hesperium
+```{r}
+ribes <- traits %>% 
+  filter(species == "Ribes") %>%
+  mutate(log_ldmc = log(ldmc)) %>% 
+  drop_na()
+
+ribes %>%
+  pivot_longer(cols = indiv_area:ldmc,
+               names_to = "traits",
+               values_to = "value") %>%
+  ggplot(aes(x = climate, y = value, color = treatment)) +
+  geom_boxplot() +
+  theme_bw() +
+  facet_grid(~ traits, scales = "free")
+```
+#### LA
+```{r}
+ribes_la <- glmmTMB(data = ribes, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # convergence problem
+ribes_la <- glmmTMB(data = ribes, indiv_area ~ climate * treatment, family = gaussian, na.action = na.fail) # convergence problem
+ribes_la <- glmmTMB(data = ribes, indiv_area ~ climate + treatment + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ribes_la) # best fit intercept only
+ribes_la <- glmmTMB(data = ribes, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(ribes_la, plot=T) # doesn't pass KS test
+shapiro.test(residuals(ribes_la)) # not normal
+```
+#### SLA
+```{r}
+ribes_sla <- glmmTMB(data = ribes, sla ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # convergence problem
+ribes_sla <- glmmTMB(data = ribes, sla ~ climate * treatment, family = gaussian, na.action = na.fail) # convergence problem
+ribes_sla <- glmmTMB(data = ribes, sla ~ climate + treatment + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ribes_sla) # best fit intercept only
+ribes_sla <- glmmTMB(data = ribes, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(ribes_sla, plot=T) # ok?
+shapiro.test(residuals(ribes_sla)) # not normal
+```
+#### LDMC
+LDMC ~ 1
+```{r}
+ribes_ldmc <- glmmTMB(data = ribes, ldmc ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # convergence problem
+ribes_ldmc <- glmmTMB(data = ribes, ldmc ~ climate * treatment, family = gaussian, na.action = na.fail) # convergence problem
+ribes_ldmc <- glmmTMB(data = ribes, ldmc ~ climate + treatment + (1|new_block), family = gaussian, na.action = na.fail)
+dredge(ribes_ldmc) # best fit intercept only
+ribes_ldmc <- glmmTMB(data = ribes, ldmc ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+
+# does data fit model?
+simulateResiduals(ribes_ldmc, plot=T) # ok?
+shapiro.test(residuals(ribes_ldmc)) # normal
+```
+### Symphoricarpos mollis (Mesic only)
+```{r}
+sym_mol <- traits %>% 
+  filter(species == "Symphoricarpos mollis") %>%
+  mutate(log_ldmc = log(ldmc)) %>% 
+  drop_na()
+
+sym_mol %>%
+  pivot_longer(cols = indiv_area:ldmc,
+               names_to = "traits",
+               values_to = "value") %>%
+  ggplot(aes(x = climate, y = value, color = treatment)) +
+  geom_boxplot() +
+  theme_bw() +
+  facet_grid(~ traits, scales = "free")
+```
+#### LA
+LA ~ 1 + block
+```{r}
+sym_mol_la <- glmmTMB(data = sym_mol, indiv_area ~ treatment + (1|new_block), family = gaussian, na.action = na.fail) #only at Mesic climate
+dredge(sym_mol_la) # best fit intercept only
+sym_mol_la <- glmmTMB(data = sym_mol, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail) 
+
+simulateResiduals(sym_mol_la, plot=T) # ok?
+shapiro.test(residuals(sym_mol_la)) # normal
+```
+#### SLA
+```{r}
+
+```
+#### LDMC
+```{r}
+
+```
+### Ericameria nauseosa
+```{r}
+eri_nau <- traits %>% 
+  filter(species == "Ericameria nauseosa") %>%
+  mutate(log_ldmc = log(ldmc)) %>% 
+  drop_na()
+
+eri_nau %>%
+  pivot_longer(cols = indiv_area:ldmc,
+               names_to = "traits",
+               values_to = "value") %>%
+  ggplot(aes(x = climate, y = value, color = treatment)) +
+  geom_boxplot() +
+  theme_bw() +
+  facet_grid(~ traits, scales = "free")
+```
+#### LA
+LA ~ 1 + block
+```{r}
+eri_nau_la <- glmmTMB(data = eri_nau, indiv_area ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # model convergence
+eri_nau_la <- glmmTMB(data = eri_nau, indiv_area ~ climate * treatment, family = gaussian, na.action = na.fail) # model convergence
+eri_nau_la <- glmmTMB(data = eri_nau, indiv_area ~ climate + treatment + (1|new_block), family = gaussian, na.action = na.fail) 
+dredge(eri_nau_la) # best fit is intercept
+eri_nau_la <- glmmTMB(data = eri_nau, indiv_area ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+
+simulateResiduals(eri_nau_la, plot=T) # ok?
+shapiro.test(residuals(eri_nau_la)) # normal
+```
+#### SLA
+SLA ~ 1 + block
+```{r}
+eri_nau_sla <- glmmTMB(data = eri_nau, sla ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # model convergence
+eri_nau_sla <- glmmTMB(data = eri_nau, sla ~ climate * treatment, family = gaussian, na.action = na.fail) # model convergence
+eri_nau_sla <- glmmTMB(data = eri_nau, sla ~ climate + treatment + (1|new_block), family = gaussian, na.action = na.fail) 
+dredge(eri_nau_sla) # best fit is intercept
+eri_nau_sla <- glmmTMB(data = eri_nau, sla ~ 1 + (1|new_block), family = gaussian, na.action = na.fail)
+
+simulateResiduals(eri_nau_sla, plot=T) # ok?
+shapiro.test(residuals(eri_nau_sla)) # normal
+```
+#### LDMC
+```{r}
+eri_nau_ldmc <- glmmTMB(data = eri_nau, ldmc ~ climate * treatment + (1|new_block), family = gaussian, na.action = na.fail) # model convergence
+eri_nau_ldmc <- glmmTMB(data = eri_nau, ldmc ~ climate * treatment, family = gaussian, na.action = na.fail) # model convergence
+eri_nau_ldmc <- glmmTMB(data = eri_nau, ldmc ~ climate + treatment + (1|new_block), family = gaussian, na.action = na.fail) # convergence 
+eri_nau_ldmc <- glmmTMB(data = eri_nau, ldmc ~ climate + treatment, family = gaussian, na.action = na.fail)
+dredge(eri_nau_ldmc) # best fit is intercept
+eri_nau_ldmc <- glmmTMB(data = eri_nau, ldmc ~ 1, family = gaussian, na.action = na.fail)
+
+simulateResiduals(eri_nau_ldmc, plot=T) # ok?
+shapiro.test(residuals(eri_nau_ldmc)) # not normal
 ```
 
 ## By functional group
-
 ```{r}
 funct_LA <- traits_19 %>% 
   drop_na(LA) %>% 
@@ -744,9 +1010,7 @@ shapiro.test(funct_LA$log_LA)
 shapiro.test(funct_LA$sqrt_LA)
 
 ```
-
 ### GLMMs
-
 ```{r}
 # Ideal model on un-transformed data:
 funct_glmm <- glmmTMB(data = funct_LA, LA ~ Climate + Treatment + Climate:Treatment + functional_group + (1|Species), family = gaussian)
@@ -797,9 +1061,7 @@ simulateResiduals(funct_glmm, plot= T) # good
 shapiro.test(residuals(funct_glmm)) # not normal
 
 ```
-
 ### GLMs by group
-
 ```{r}
 grass_LA <- traits_19 %>% 
   drop_na(LA) %>% 
@@ -874,13 +1136,9 @@ shapiro.test(residuals(funct_glm)) # not normal
 
 #random effect with gaussian
 funct_glm <- glm(data = funct_LA, LA ~ Climate + Treatment + functional_group + (1|fact_Species), family = "gaussian")
-
-
 ```
 
-
 ```{r}
-
 grass_LA <- traits_19 %>% 
   drop_na(LA) %>% 
   mutate(log_LA = log(LA)) %>% 
@@ -935,10 +1193,7 @@ grass_glm <- glm(data = grass_LA, sqrt_LA ~ 1, family = gaussian, na.action = na
 
 simulateResiduals(grass_glm, plot= T) # not normal
 shapiro.test(residuals(grass_glm)) # normal
-
-
 ```
-
 
 ```{r}
 shrub_LA <- traits_19 %>% 
@@ -978,7 +1233,6 @@ ggplot(shrub_LA, aes(x = inv_LA)) +
   geom_histogram(bins=100) +
   theme_bw()
 
-
 shrub_glm <- glm(data = shrub_LA, LA ~ Climate + Treatment, family = Gamma, na.action = na.fail)
 dredge(shrub_glm)
 shrub_glm <- glm(data = shrub_LA, LA ~ Climate, family = Gamma, na.action = na.fail)
@@ -1013,9 +1267,7 @@ shrub_glm <- glm(data = shrub_LA, inv_LA ~ Climate, family = gaussian, na.action
 
 simulateResiduals(shrub_glm, plot= T) # not normal
 shapiro.test(residuals(shrub_glm)) # normal
-
 ```
-
 
 ```{r}
 # # TRY Database search to fill in missing species
@@ -1036,6 +1288,4 @@ shapiro.test(residuals(shrub_glm)) # normal
 #   rename(species_name = AccSpeciesName)
 # 
 # write.csv(TRY_DB_2, "TRY_DB_2.csv")
-
 ```
-
